# blurdroid

./: .gitignore  Cargo.toml  README.md  build.rs
src/: bluetooth_adapter.rs  bluetooth_device.rs  bluetooth_discovery_session.rs  bluetooth_gatt_characteristic.rs  bluetooth_gatt_descriptor.rs  bluetooth_gatt_service.rs  ffi.rs  lib.rs  utils.rs
src/java/hu/uszeged/bluetooth/: BluetoothAdapterAndroid.java  BluetoothAdapterWrapper.java  BluetoothDeviceAndroid.java  BluetoothDeviceWrapper.java  BluetoothGattAndroid.java  BluetoothGattCallbackAndroid.java  BluetoothGattCallbackWrapper.java  BluetoothGattCharacteristicAndroid.java  BluetoothGattCharacteristicWrapper.java  BluetoothGattDescriptorAndroid.java  BluetoothGattDescriptorWrapper.java  BluetoothGattServiceAndroid.java  BluetoothGattServiceWrapper.java  BluetoothGattWrapper.java  ScanRecord.java
src/jni/: Android.mk  bluetooth-adapter.c  bluetooth-adapter.h  bluetooth-characteristic.c  bluetooth-characteristic.h  bluetooth-descriptor.c  bluetooth-descriptor.h  bluetooth-device.c  bluetooth-device.h  bluetooth-service.c  bluetooth-service.h  blurdroid_jni.c  jni-memory.c  jni-memory.h  jni-utils.c  jni-utils.h
src/rust/: bluetooth_adapter.rs  bluetooth_device.rs  bluetooth_discovery_session.rs  bluetooth_gatt_characteristic.rs  bluetooth_gatt_descriptor.rs  bluetooth_gatt_service.rs  ffi.rs  lib.rs  utils.rs
